@@ -38,22 +38,22 @@ public class SecurityConfig {
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
 
-        configuration.setAllowedOriginPatterns(List.of("http://localhost*", "capacitor://localhost", "ionic://localhost", "http://localhost:4200"));
+        // Permite qualquer localhost (React/Vite/Angular)
+        configuration.setAllowedOriginPatterns(List.of(
+                "http://localhost:*",    // permite 3000, 4200, 5173 etc
+                "capacitor://localhost",
+                "ionic://localhost"
+        ));
 
-        // ✅ Permite requisições do frontend Angular
-        configuration.setAllowedOrigins(Arrays.asList("http://localhost:4200"));
-
-
-        // ✅ Permite todos os métodos HTTP necessários
+        // Métodos permitidos
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
 
-        // ✅ Permite todos os headers
-        configuration.setAllowedHeaders(Arrays.asList("*"));
+        // Headers permitidos
+        configuration.setAllowedHeaders(List.of("*"));
 
-        // ✅ Permite envio de credenciais (cookies, authorization headers)
+        // Permite envio de Authorization header (JWT)
         configuration.setAllowCredentials(true);
 
-        // ✅ Cache do preflight por 1 hora
         configuration.setMaxAge(3600L);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
@@ -61,6 +61,7 @@ public class SecurityConfig {
 
         return source;
     }
+
 
     @Bean
     public BCryptPasswordEncoder bCryptPasswordEncoder() {
